Added legege to contributors list

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 	},
 	"contributors": [
 		"Phil Rene (https://github.com/philrene)",
-		"Chris Chua (https://github.com/chrisirhc)"
+		"Chris Chua (https://github.com/chrisirhc)",
+		"Georges-Etienne Legendre (https://github.com/legege)"
 	],
 	"license": "MIT"
 }
